--- a/style.css
+++ b/style.css
@@ -1,8 +1,62 @@
 body{
     font-family: 'Open Sans', sans-serif;
-    color: rgb(95, 91, 91);
-    margin: 0px;
+    color: rgb(255, 255, 255);
+    margin: 0;
+    padding: 0;
+    background: #42455a;
 }
+
+
+
+.menu ul{
+    display: inline-flex;
+    margin: 50px;
+}
+
+.menu li{
+    list-style: none;
+    margin: 0 20px;
+    color: #b2b1b1;
+    cursor: pointer;
+}
+
+.logo img{
+    width: 40px;
+    margin-top: -15px;
+    margin-right: 48px ;
+}
+
+.active{
+    color:#19dafa !important;
+}
+.signup-btn{
+    top: 40px;
+    right: 80px;
+    position: absolute;
+    text-decoration: none;
+    color: white;
+    border: 2px solid transparent;
+    border-radius: 20px;
+    background-image: linear-gradient(#42455a,#42455a), radial-gradient(circle at top left, #fd00da,#19d7f8);
+    background-origin: border-box;
+    background-clip: content-box,border-box;
+
+}
+
+.signup-btn span{
+    display: block;
+    padding: 8px 22px;
+}
+
+
+
+p{
+    color: rgb(184, 176, 176);
+}
+ #quotes{
+     color:rgb(30, 182, 182);
+ }
+
 h1{
     font-size: 50px;
     font-weight: 900;
@@ -17,11 +71,11 @@ h1{
     border-radius: 25px;
     background-image: linear-gradient(to right, #e1b12c,#e84118);
     font-weight: 700;
-    color: whitesmoke;
+    color: white;
 }
 .flexible{
     display:flex;
-    /* margin-left: 5% ; */
+    /* margin-top: 0;  */
     margin-bottom: 100px;
 }
 .text-box{
@@ -65,15 +119,16 @@ h1{
     padding: 5px;
     padding-top: 15px;
     width: 25%;
-    border: 1px solid rgb(255, 254, 252);
+    border: 1px solid rgba(8, 11, 31, 0.274);
     text-align: center;
-    box-shadow: 10px 10px 30px 0px rgba(121, 110, 110, 0.274);
+    box-shadow: 10px 10px 30px 0px black;
     border-radius: 20px;
     
     
 }
 .food-image{
     width: 90%;
+    border-radius: 7%;
 }
 .social-media-box{
     width: 30%;
@@ -83,19 +138,17 @@ h1{
 }
 .black-heading{
     font-size: 40px;
-    color: black;
+    color: rgb(255, 255, 255);
     margin: 0px;
     font-family: 'Barlow', sans-serif;
 }
-h3{
-    color: black;
-}
+
 
 #bordering{
     margin-left: 5%;
     margin-right: 5%;
     padding: 2%;
-    box-shadow: 10px 10px 30px 0px rgba(121, 110, 110, 0.274);
+    box-shadow: 10px 10px 30px 0px black;
     border-radius: 20px;
 
 }
