--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 }
 
 .active{
-    color:#19dafa !important;
+    color:rgba(143, 199, 33, 0.883) !important;
 }
 .signup-btn{
     top: 40px;
@@ -37,7 +37,7 @@ body{
     color: white;
     border: 2px solid transparent;
     border-radius: 20px;
-    background-image: linear-gradient(#42455a,#42455a), radial-gradient(circle at top left, #fd00da,#19d7f8);
+    background-image: linear-gradient(#42455a,#42455a), radial-gradient(circle at top left,#19d7f8, rgb(134, 184, 34));
     background-origin: border-box;
     background-clip: content-box,border-box;
 
@@ -48,6 +48,10 @@ body{
     padding: 8px 22px;
 }
 
+#link-portfolio{
+    text-decoration: none;
+    color: #b2b1b1;
+}
 
 
 p{
@@ -114,14 +118,17 @@ h1{
 .alignment{
     text-align: center;
 }
+h2{
+    color: rgb(134, 184, 34);
+}
 .box-create{
     margin: 5%;
     padding: 5px;
     padding-top: 15px;
     width: 25%;
-    border: 1px solid rgba(8, 11, 31, 0.274);
+    border: 1px solid rgba(13, 20, 71, 0.274);
     text-align: center;
-    box-shadow: 10px 10px 30px 0px black;
+    box-shadow: 10px 10px 30px 0px rgb(20, 19, 19);
     border-radius: 20px;
     
     
@@ -136,9 +143,9 @@ h1{
     padding: 5px;
 
 }
-.black-heading{
+.color-heading{
     font-size: 40px;
-    color: rgb(255, 255, 255);
+    color: rgb(134, 184, 34);
     margin: 0px;
     font-family: 'Barlow', sans-serif;
 }
