social media icon added

--- a/style.css
+++ b/style.css
@@ -97,8 +97,8 @@ h1{
 }
 
 .image{
-    width: 50%;
-    padding:10% 10% 0% 0%;
+    width: 60%;
+    padding:5% 10% 0% 0%;
     border: none;
     display: block;
     
@@ -173,4 +173,18 @@ footer p{
 }
 
 
-
+.social-icons li{
+    display: inline-block;
+    list-style: none;
+    padding-bottom: 2%;
+}
+.social-icons ul{
+    text-align: center;
+    margin-right: 10%;
+    margin-left: 10%;
+    margin-top: -40px;
+}
+.icon{
+    width: 40px;
+    margin-right: 35px ;
+} 
