--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ h1{
     margin-top: 15%;
     margin-left: 5%;
     width: 40%;
+    text-align: justify;
     
 }
 .image-box{
@@ -133,6 +134,13 @@ h2{
     
     
 }
+
+.box-create p{
+    color:rgb(4, 255, 171);
+    margin: 5%;
+    text-align: justify;
+}
+
 .food-image{
     width: 90%;
     border-radius: 7%;
